🐸✊ Checkpoint ./style.css:43031560/3642 ./rare.css:43031560/4863 ./mwell.css:43031560/4861 ./medium.css:43031560/4862 ./medium.html:43031560/2592 ./medium.js:43031560/6058 ./mwell.html:43031560/2552 ./mwell.js:43031560/6053 ./rare.html:43031560/3812 ./rare.js:43031560/6274 ./index.html:43031560/1589

--- a/mwell.css
+++ b/mwell.css
@@ -68,3 +68,15 @@ color:#EB1D36;
     margin-top: 30px;
 }
 
+
+
+@media all and (max-width:500px){
+  body{
+ background-size: auto;
+ background-color:#393d3e ;
+ }
+h1{font-size: 50px;}
+#btn{
+ padding: 10px;
+}
+}  
