--- a/style.css
+++ b/style.css
@@ -31,9 +31,10 @@ color:#EB1D36;
 a{
     text-decoration: none;
     color: black;
-    
-   }
-
+       }
+ a:hover {
+        color:#000000;
+    }
 
 
 
